WISH: skipscroll option
WISH: selection-color-pair instead of reverse video
WISH: load system-wide config file even if we don't have one
WISH: look into XAddConnectionWatch, does anybody need that?
WISH: anyevent mouse notification / manage MotionMask better.
WISH: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep scrollbar look.
DUMB: support tex fonts

7.8  Mon Jul 17 21:00:46 CEST 2006
	- INCOMPATIBLE CHANGE: this version will always read ~/.Xdefaults,
          earlier versions only read it if display-resources (usually from
          .Xresources) are not set. This avoids the #1 FAQ ("why isn't my
          resource used") and seems to be logical behaviour, too. .Xdefaults
          resources have a lower priority than display-specific resources.
        - add "kuake" perl extension that does a similar thing to the kuake
          terminal emulator (see man urxtvperl).
        - use less "correct" color scaling that is compatible with libX11 and
          Xft (avoids off-by-one colors resulting in striped backgrounds).
        - the "depth" resource is now respected.
        - preset the searchable-scrollback pattern with "(?i)" to default search
          to case-insensitivity. Will automatically be cleared when typing an
          uppercase character.
	- add FORCE_UNBUFFERED_XFT define to features.h.
        - re-enabled highlightcolor support with --enable-frills, based on
          a patch by Martin Stubenschrott.
        - double-buffered xft drawing did suffer from pixel offset issues
          when pixmap transparency was enabled.
        - strategically add # to the url-match regexes, as we really want to
          match common URIs not common URLs. Reported by Aaron Griffin.
	- moved on_osc_seq to on_osc_seq_perl and added a more
          generic osc_seq.
        - fix a bug causing double callback invocations when perl hooks
          were invoked recursively.